--- a/style.css
+++ b/style.css
@@ -19,4 +19,9 @@ top: 8px;
     border: black 2px solid;
     word-break: normal;
     font-family: Arial, Helvetica, sans-serif;
+    padding: 20px;
+
+}
+.centraliza{
+    text-align: center;
 }
